[package]
name = "sensorlog"
description = "A lightweight data logging service"
version = "0.1.0"
authors = ["The sensorlog Authors <oss@nyantec.com>"]
license = "MirOS"

[[bin]]
name = "sensorlogd"
path = "src/server.rs"

[[bin]]
name = "sensorlogctl"
path = "src/cli.rs"

[dependencies]
getopts = "0.2.17"
log = "0.4.1"
env_logger = "0.5.10"
iron = "0.4.0"
serde = "1.0.55"
serde_derive = "1.0.55"
serde_json = "1.0.17"
