[package]
name = "sensorlog"
description = "A lightweight data logging service"
repository = "https://github.com/nyantec.sensorlog"
version = "1.1.0"
authors = ["The sensorlog Authors <oss@nyantec.com>"]
license = "MirOS"

[dependencies]
getopts = "0.2.17"
log = "0.4.1"
env_logger = "0.5.10"
futures = "0.1.14"
futures-cpupool = "0.1.8"
hyper = "0.11.2"
serde = "1.0.55"
serde_derive = "1.0.55"
serde_json = "1.0.17"
md5 = "0.3.7"
